* Make $() fallback on the `expando` varaible for malformed strings to avoid passing an empty string to document.getElementById(). [jddalton]

* Rename String#strip to String#trim and add JavaScript 1.8.1 String#trimLeft and String#trimRight support. [jddalton]
  Note: Backwards compatibility warning.

* Rename Element#absolutize to Element#makeAbsolute and Element#relativize to Element#undoAbsolute. [jddalton]
  Note: Backwards compatibility warning.

* Ensure Element#cumulativeOffset works with hidden elements or elements with borders and Element#clonePosition resizes elements, with various paddings, correctly. [Prototype LH #603] [jddalton, Manuel Carrasco]

* Make Element#clonePosition work correctly when `source` is an ancestor of `element`. [jddalton]
  - Add Element._getBorderWidth(), Element._getBorderHeight(), Element._getPaddingWidth(), and Element._getPaddingHeight()
  - Element#cummulativeOffset allow a second `ancestor` argument to be used to stop iterating when it encounters the ancestor
  - Make Fuse.Browser.Bug() and Fuse.Browser.Feature() expose their internal cache object as `_object`

* Ensure Element#getOffsetParent returns the proper offsetParent for hidden elements. [Prototype LH #618] [jddalton, rvagg]

* Allow Element#getOffsetParent to return null and remove Element._getRealOffsetParent() helper. [jddalton]
  Note: Backwards compatibility warning.

* Move Element#getStyle and Element#setStyle to the same closure so they can share constants as well as cleanup Element#setOpacity and Element#getStyle. [jddalton]

* Remove unneeded `decodeURIComponent(escape(json))` from Ajax.Response#_getHeaderJSON and rely on proper encoding instead. [Prototype LH #620] [FuseJS LH #27] [jddalton, Mark Caudill, Paul Alexandrow]

* Ensure strict arguments.length comparisons, cleanup Array#inject, and remove arguments.length based forking in Array#first and Array#last. [jddalton]
