@@ -11,6 +11,10 @@
 <div id="test-hide-hidden" style="display:none;">hidden</div>
 <div id="test-show-visible">visible</div>
 <div id="test-show-hidden" style="display:none;">hidden</div>
+<div id="test-nested-hidden-visible" style="display:none;">
+  <div id="test-nestee-hidden-visible">hidden</div>
+</div>
+<div id="test-hidden-by-size" style="width:0px;"></div>
 <div id="removable-container"><div id="removable"></div></div>
 
 <div>
